área de navegação finalizada

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -14,23 +14,35 @@ body{
 }
 .sidebar{
     height: 100%;
-    width: 275px;
+    width: 90px;
     position: fixed;
-    background: rgba(199, 177, 143);
+    background: rgb(219, 196, 162);
     top: 0;
     left: 0;
     padding:  6px 10px;
+    transition: all 0.5s ease;
+    
 }
-
+.sidebar.active{
+    width: 275px;
+    
+}
 .sidebar .logo_content .logo{
     display: flex;
     height: 50px;
     width:100% ;
     align-items: center;
+    opacity: 0;
+    pointer-events: none;
+}
+.sidebar.active .logo_content .logo{
+    opacity: 1;
+    pointer-events: none;
 }
 .logo_content .logo .img_logo{
     font-size: 28px;
     margin-right: 10px;
+    margin-top: 10px;
     width: 40%;
 }
 .logo_content .logo .logo_name{
@@ -39,44 +51,81 @@ body{
 .sidebar #btn{
     position: absolute;
     font-size: 35px;
-    left: 85%;
+    left: 30%;
     height: 50px;
     width: 50px;
     top: 6px;
     line-height: 55px;
+    
   
 }
-.sidebar ul{
+.sidebar.active #btn{
+    left: 85%;
+
+}
+.sidebar .nav_list{
     margin-top: 20px;
     font-size: 20px;
-    
+    left: 85%;
+    padding-left: 5px;
+    text-align: center;
 }
 .sidebar ul li{
     height: 50px;
-    width: 100%;
+    width: 90%;
     list-style: none;
     position: relative;
     margin: 20px 5px;
     line-height: 40px;
+    padding-left: 0;
 }
+.sidebar ul li .negocio{
+    position: absolute;
+    height: 40px;
+    width: 122px;
+    background:white;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+    left: 122px;
+    top: 0;
+    transform: translateY(-50%, -50%);
+    border-radius:  6px;
+    line-height: 35px;
+    text-align: center;
+    font-size: 20px;
+    transition: 0s;
+    opacity: 0;
+    pointer-events: none;
+    display: block;
+}
+.sidebar.active ul li .negocio{
+    display: none;
+}
+.sidebar ul li:hover .negocio{
+    top: 13%;
+    transition: all 0.5s ease;
+    opacity: 1;
 
+}
 .sidebar ul li a{
     color: black;
     display: flex;
     align-items: center;
     text-decoration: none;
     font-size: 25px;
-    transition: all 1;
+    transition: all 0.4s;
     border-radius: 12px;
+    white-space: nowrap;
+    
 }
 .sidebar ul li a:hover{
     color:white;
     background-color: rgb(204,162,102);
 
+
 }
 .sidebar ul li input{
     height: 100%;
-    width: 100%;
+    width: 50%;
     position:absolute;
     border-radius: 6px;
     left: 0;
@@ -87,19 +136,36 @@ body{
     font-size: 18px; 
 
 }
+.sidebar.active ul li input{
+    width: 100%;
+}
 .sidebar ul li .bx-search-alt-2{
     position: absolute;
-    z-index:99 ;
+    z-index: 99;
     font-size: 25px;
     left: 0;
+    transition: all 0.5s ease;
+}
+.sidebar ul li .bx-search-alt-2:hover{
+    background: white;
+    color:rgb(204,162,102);
 
 }
+
 .sidebar ul li i{
     height: 50px;
     min-width: 50px;
     border-radius: 12px;
     line-height: 50px;
     text-align: center;
+}
+.sidebar .links_name{
+    opacity: 0;
+    pointer-events: none;
+}
+.sidebar.active .links_name{
+    opacity: 1;
+    pointer-events: auto;
 }
 .sidebar .profile_content{
     position: absolute;
@@ -113,15 +179,27 @@ body{
     padding: 10px 6px;
     height: 80px;
     background: rgba(204, 162, 102, 0.521);
+
 }
-.sidebar .profile_content .profile .profile_details{
+.profile_content .profile .profile_details{
     display: flex;
     align-items: center;
+    opacity: 0;
+    pointer-events: none;
+    white-space: nowrap;
 }
 .profile .profile_details img{
     height: 25%;
     width: 25%;
     border-radius: 50px;
+    opacity: 1;
+    pointer-events: none;
+    white-space: nowrap;
+    object-fit: cover;
+}
+.sidebar.active .profile .profile_details{
+    opacity: 1;
+    pointer-events: auto;
 }
 .profile .profile_details .name_job{
     margin-left: 10px;
@@ -135,13 +213,17 @@ body{
 }
 .profile .bx-log-out{
     position: absolute;
-    left: 88%;
+    left: 50%;
     bottom: 5px;
     transform: translateX(-50%);
     min-width: 50px;
     line-height: 50px;
     font-size: 25px;
     border-radius: 12px;
+    text-align: center;
+}
+.sidebar.active .bx-log-out{
+    left: 88%;
 }
 #artesanatos{
     background: rgba(199, 177, 143, 0.5);
@@ -175,4 +257,16 @@ body{
 .teste{
     width: 75%;
     height: 75%;
+}
+.bxs-home-smile{
+    padding-left: 8px;
+}
+.bx-log-in{
+    padding-left: 4px;
+}
+.bxs-category{
+    padding-left: 8px;
+}
+.bxs-group{
+    padding-left: 12px;
 }
