--- a/CSS/style.css
+++ b/CSS/style.css
@@ -4,6 +4,8 @@
     margin: 0;
     padding: 0;
     font-family: 'Abel', sans-serif;
+
+
     
 }
 body{
@@ -11,6 +13,8 @@ body{
     min-height: 100vh;
     width: 100%;
     overflow: hidden;
+
+
 }
 .sidebar{
     height: 100%;
@@ -288,6 +292,10 @@ body{
 
 
 
-.bx-log-out{
-    
+.produto{
+    background: rgb(219, 196, 162);
+    width: auto;
+    margin-left: 500px;
+    height: auto;
+    padding: 10px;
 }
